--- a/src/resources/css/playerstats.css
+++ b/src/resources/css/playerstats.css
@@ -4,6 +4,9 @@
     padding: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+html{
+    font-size: 10px;
+}
 .player-stats-container-div,
 .main-div{
     padding: 0.5% 2%;
@@ -29,7 +32,7 @@
 .main-div .navbar #help-button{   
     display: inline-block;
     color: gray;
-    font-size: 30px;
+    font-size: 3rem;
     font-weight: lighter;
     padding-right: 30px;
 }
@@ -48,7 +51,7 @@
     width: 100%;
     text-align: center;
     color: gray;
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: lighter;
 }
 .player-stats-container-div .sub-container .player-stats-container{
@@ -73,7 +76,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 20px;
+    font-size: 2rem;
 }
 .player-stats-container-div .sub-container .player-stats-container .col-right .concise-data-container{
     padding: 10px 0px;
@@ -114,6 +117,9 @@
         border: none;
         border-top: 2px solid gray; 
     }
+    .player-stats-container-div .sub-container{
+        margin-top: 20px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -122,10 +128,14 @@
     }
     .player-stats-container-div .sub-container .player-stats-container .col-right{
         padding: 20px 80px;
-        font-size: 19px;
+        font-size: 1.9rem;
     }
     .player-stats-container-div .navbar #home-button, 
     .player-stats-container-div .navbar #help-button{
-        font-size: 28px;
+        font-size: 2.8rem;
     }
+    .player-stats-container-div .sub-container .player-stats-container .col-right{
+        font-size: 1.5rem;
+    }
+
 }
