--- a/src/resources/css/homepage.css
+++ b/src/resources/css/homepage.css
@@ -3,7 +3,9 @@
     margin: 0;
     padding: 0;
 }
-
+html{
+    font-size: 10px;
+}
 ul::-webkit-scrollbar {
     width: 8px;
 }
@@ -39,7 +41,7 @@ ul::-webkit-scrollbar-thumb:hover {
     text-decoration: none;
 }
 .container-div #heading{
-    font-size: 60px;
+    font-size: 6rem;
 }
 .container-div .navbar span{
     color: rgb(2, 83, 2);
@@ -61,9 +63,9 @@ ul::-webkit-scrollbar-thumb:hover {
 }
 .container-div .search-div select,
 .container-div .search-div select option{
-    font-size: 20px;
+    font-size: 2rem;
     text-align: center;
-    margin-right: 10px;
+    margin-right: 5px;
     cursor: pointer;
     border: none;
     outline: none;
@@ -90,7 +92,7 @@ ul::-webkit-scrollbar-thumb:hover {
     background-position: 0px 15px;
     background-repeat: no-repeat;
     padding: 10px 25px;
-    font-size: 23px;
+    font-size: 2.3rem;
     border: none;
     outline: none;
 }
@@ -105,5 +107,5 @@ ul::-webkit-scrollbar-thumb:hover {
     background-color: rgb(209, 241, 209);
     color: #000;
     padding: 15px;
-    font-size: 20px;
+    font-size: 2rem;
 }
