--- a/src/resources/css/playerstats.css
+++ b/src/resources/css/playerstats.css
@@ -11,6 +11,7 @@ html{
 .main-div{
     padding: 0.5% 2%;
     min-height: 100vh;
+    width: 100vw;
     background: url('../images/bg.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
