--- a/src/resources/css/homepage.css
+++ b/src/resources/css/homepage.css
@@ -23,7 +23,7 @@ ul::-webkit-scrollbar-thumb:hover {
     padding: 0.5% 5%;
     height: 100vh;
     width: 100vw;
-    background: url('../images/bg.png');
+    background: url('../images/homeInfoBg.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size:cover;
@@ -52,8 +52,8 @@ ul::-webkit-scrollbar-thumb:hover {
     left: 50%;
     transform: translate(-50%);
     padding: 5px;
+    padding-right: 15px;
     border: 2px solid #000;
-    border-bottom: none;
     border-radius: 10px;
     max-width: 90vw;
     display: flex;
@@ -86,10 +86,9 @@ ul::-webkit-scrollbar-thumb:hover {
     font-weight: 600;
 }
 .container-div .search-div input{
-    text-align: center;
     background-color: transparent;
     background-image: url('../images/search_icon.png');
-    background-position: 0px 15px;
+    background-position: 100% 15px;
     background-repeat: no-repeat;
     padding: 10px 25px;
     font-size: 2.3rem;
