--- a/src/resources/css/playerstats.css
+++ b/src/resources/css/playerstats.css
@@ -12,7 +12,7 @@ html{
     padding: 0.5% 2%;
     min-height: 100vh;
     width: 100vw;
-    background: url('../images/bg.png');
+    background: url('../images/playerInfoBg.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -54,6 +54,12 @@ html{
     color: gray;
     font-size: 4rem;
     font-weight: lighter;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.player-stats-container-div .sub-container .player-name-container .player-name{
+    margin-right: 10px;
 }
 .player-stats-container-div .sub-container .player-stats-container{
     padding: 10px 0px;
