--- a/src/resources/css/homepage.css
+++ b/src/resources/css/homepage.css
@@ -52,6 +52,7 @@ ul::-webkit-scrollbar-thumb:hover {
     left: 50%;
     transform: translate(-50%);
     padding: 5px;
+    padding-top: 10px;
     padding-right: 15px;
     border: 2px solid #000;
     border-radius: 10px;
@@ -96,17 +97,29 @@ ul::-webkit-scrollbar-thumb:hover {
     outline: none;
 }
 .container-div .list-container ul{
-    margin-top: 15px;
+    margin-top: 10px;
     list-style-type: none;
     max-height: 300px;
     overflow-y: auto;
     overflow-x: hidden;
 }
-.container-div .list-container ul li{
+.container-div .list-container ul .player-row{
     background-color: rgb(209, 241, 209);
     color: #000;
     padding: 15px;
     font-size: 2rem;
+}
+@media (max-width: 910px){
+    .container-div .search-div select{
+        margin-bottom: 10px;
+    }
+    .container-div .search-div select,
+    .container-div .search-div select option{
+        font-size: 1.7rem;
+    }
+    .container-div .search-div input{
+        font-size: 2rem;
+    }
 }
 @media (max-width: 600px) {
     .container-div{
